Navbar z-index solved

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -77,7 +77,8 @@
         padding: 24px 16px;
 
         &__links {
-            background-color: var(--primary-color);
+            z-index: 10;
+            background-color: var(--bgsecondary-color);
             box-shadow: 0px 30px 21px rgba(207, 185, 151, 0.3);
             width: 100%;
             padding: 24px 10px;
