--- a/src/containers/Hero/Hero.scss
+++ b/src/containers/Hero/Hero.scss
@@ -1,9 +1,9 @@
 .hero {
-    position: relative;
     background-color: var(--bgsecondary-color);
     padding: 25px 60px;
-
+    
     .hero__container {
+        position: relative;
         height: 100vh;
         display: flex;
         align-items: center;
@@ -13,8 +13,9 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-
+            
             & h1 {
+                z-index: 6;
                 font-size: 60px;
                 font-weight: 500;
                 max-width: 670px;
@@ -58,7 +59,7 @@
 
         .hero__container {
             flex-direction: column;
-
+            
             .content {
                 align-items: center;
                 margin-bottom: 40px;
